build to deploy